--- a/globe/index.html
+++ b/globe/index.html
@@ -110,11 +110,13 @@
   </div>
 
   <div id="currentInfo">
-    <span id="answers" class="year">Urban Parks</span>
+    <span id="year1990" class="year">1990</span>
+    <span id="year1995" class="year">1995</span>
+    <span id="year2000" class="year">2000</span>
   </div>
 
   <div id="title">
-    PyBossa Urban Parks
+    World Population
   </div>
 
   <a id="ce" href="http://www.chromeexperiments.com/globe">
@@ -133,7 +135,7 @@
       Detector.addGetWebGLMessage();
     } else {
 
-      var years = ['Urban Parks'];
+      var years = ['1990000','1995','2000'];
       var container = document.getElementById('container');
       var globe = new DAT.Globe(container);
       console.log(globe);
@@ -142,7 +144,7 @@
       var settime = function(globe, t) {
         return function() {
           new TWEEN.Tween(globe).to({time: t/years.length},500).easing(TWEEN.Easing.Cubic.EaseOut).start();
-          var y = document.getElementById('answers');
+          var y = document.getElementById('year'+years[t]);
           if (y.getAttribute('class') === 'year active') {
             return;
           }
@@ -155,7 +157,7 @@
       };
 
       for(var i = 0; i<years.length; i++) {
-        var y = document.getElementById('answers');
+        var y = document.getElementById('year'+years[i]);
         y.addEventListener('mouseover', settime(globe,i), false);
       }
 
@@ -164,33 +166,12 @@
 
 
       xhr = new XMLHttpRequest();
-      //xhr.open('GET', 'globe/population909500.json', true);
-      xhr.open('GET', 'http://pybossa.com/api/taskrun?app_id=13&limit=1000', true);
+      xhr.open('GET', '/globe/population909500.json', true);
       xhr.onreadystatechange = function(e) {
         if (xhr.readyState === 4) {
           if (xhr.status === 200) {
             var data = JSON.parse(xhr.responseText);
-            console.log("Urban Parks demos!!");
-            //console.log(data);
-            //console.log(data[0]['info']['city']);
-            //console.log(data[0]['info']['urbanpark']['geometry']['coordinates']);
             window.data = data;
-            var d = [];
-            console.log(data[0]);
-            if ('coordinates' in data[0]['info']['urbanpark']['geometry'])
-                console.log("True");
-            for (i=0;i<data.length;i++) {
-                console.log(data[i]);
-                if (data[i]['info']['urbanpark']!='NoPark')
-                {
-                d.push(data[i]['info']['urbanpark']['geometry']['coordinates'][1],
-                       data[i]['info']['urbanpark']['geometry']['coordinates'][0],
-                        0.07);
-                }
-            }
-            d = [['Urban Parks', d]];
-            console.log(d);
-            data = d;
             for (i=0;i<data.length;i++) {
               globe.addData(data[i][1], {format: 'magnitude', name: data[i][0], animated: true});
             }
