--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
   <div id="container"></div>
 
   <div id="info">
-    <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span> Created by the Google Data Arts Team <span class="bull">&bull;</span> Data acquired from <a href="http://sedac.ciesin.columbia.edu/gpw/">SEDAC</a>
+    <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span> Created by the Google Data Arts Team <span class="bull">&bull;</span> Data acquired from <a href="http://pybossa.com/app/urbanpark">PyBossa.com</a>
   </div>
 
   <div id="currentInfo">
     <span id="answers" class="year">Urban Parks</span>
+    <p>This WebGL demo is built using the Google Chrome Globe WebGL demo from Google Data Arts Team. The globe shows the answers submitted by volunteers all over the world using the PyBossa platform.</p>
+    <p><a href="http://pybossa.com">PyBossa</a> is a free, open-source, platform for creating and running crowd-sourcing applications that utilise online assistance in performing tasks that require human cognition, knowledge or intelligence such as image classification, transcription, geocoding and more!/</p>
   </div>
 
   <div id="title">
