--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <span id="answers" class="year">Urban Parks</span>
     <br/>
     <br/>
-    <p>This WebGL demo is built using the Google Chrome Globe WebGL demo from Google Data Arts Team. The globe shows the answers submitted by volunteers all over the world using the PyBossa platform.</p>
+    <p style="top-padding:30px;">This WebGL demo is built using the Google Chrome Globe WebGL demo from Google Data Arts Team. The globe shows the answers submitted by volunteers all over the world using the PyBossa platform.</p>
     <p><a href="http://pybossa.com">PyBossa</a> is a free, open-source, platform for creating and running crowd-sourcing applications that utilise online assistance in performing tasks that require human cognition, knowledge or intelligence such as image classification, transcription, geocoding and more!/</p>
   </div>
 
