--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     </style>
   </head>
   <body>
-
   <div id="container"></div>
+<a href="https://github.com/teleyinex/pybossa-urbanpark-globe"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 
   <div id="info">
     <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span> Created by the Google Data Arts Team <span class="bull">&bull;</span> Data acquired from <a href="http://pybossa.com/app/urbanpark">PyBossa.com</a>
