--- a/index.html
+++ b/index.html
@@ -126,11 +126,10 @@
     <span id="answers" class="year">Answers</span>
     <br/>
     <br/>
-    <p style="top-padding:30px;">This WebGL demo is built using the Google Chrome Globe WebGL demo from Google Data Arts Team. The globe shows the submitted urban parks found by volunteers all over the world using the PyBossa platform.</p>
-    <p><a href="http://pybossa.com">PyBossa</a> is a free, open-source, platform for creating and running crowd-sourcing applications that utilise online assistance in performing tasks that require human cognition, knowledge or intelligence such as image classification, transcription, geocoding and more!/</p>
+    <p style="top-padding:20px;">This WebGL demo is built using the Google Chrome Globe WebGL demo from Google Data Arts Team (you can zoom in!). The globe shows the submitted urban parks found by volunteers all over the world using the PyBossa platform.</p>
+    <p><a href="http://pybossa.com">PyBossa</a> is a free, open-source, platform for creating and running crowd-sourcing applications that utilise online assistance in performing tasks that require human cognition, knowledge or intelligence such as image classification, transcription, geocoding and more!</p>
     <p>In this geo-coding application, volunteers are asked to find an urban park from a list of different cities. The volunteers use a web map to brwose the city, and then submit an answer: the coordinates of the urban park by placing a marker in the map, or saying: I don't find any park.</p>
     <p>If you want more details about PyBossa, check the official site <a href="http://pybossa.com">pybossa.com</a> and also the <a href="docs.pybossa.com">online documentation</a></p>
-    <p>You can use the wheel of the mouse to zooming in and out of the globe.</p>
   </div>
 
   <div id="title">
