--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
       xhr = new XMLHttpRequest();
       //xhr.open('GET', 'globe/population909500.json', true);
-      xhr.open('GET', 'http://localhost:5001/api/taskrun?project_id=149&limit=100', true);
+      xhr.open('GET', 'http://crowdcrafting.org/api/taskrun?project_id=149&limit=100', true);
       xhr.onreadystatechange = function(e) {
         if (xhr.readyState === 4) {
           if (xhr.status === 200) {
@@ -216,7 +216,7 @@
                     }
                 }
                 console.log("Requesting more data");
-                var url = 'http://localhost:5001/api/taskrun?project_id=149&limit=100&last_id=' + last_id;
+                var url = 'http://crowdcrafting.org/api/taskrun?project_id=149&limit=100&last_id=' + last_id;
                 console.log(url);
                 xhr.open('GET', url, true);
                 xhr.send();
